{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 335,
  "lineage": "85a7e1f4-c1cd-b511-637c-f69ddedbe406",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:security-group/sg-07ed1e64ce1baaa1a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ed1e64ce1baaa1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20211119235039366100000003",
            "name_prefix": "all_worker_management",
            "owner_id": "970391478493",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:security-group/sg-0a2f34e9aeea775ec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a2f34e9aeea775ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211119235039373200000004",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "970391478493",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:security-group/sg-0cdfa8cdfac6e97ce",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cdfa8cdfac6e97ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20211119235040008100000005",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "970391478493",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:security-group/sg-03b16febf9acf6f27",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-03b16febf9acf6f27",
            "ingress": [],
            "name": "questo-eks-AF7DWDoH20211119235040274100000006",
            "name_prefix": "questo-eks-AF7DWDoH",
            "owner_id": "970391478493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "questo-eks-AF7DWDoH-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "questo-eks-AF7DWDoH-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:security-group/sg-0e82e29c72a04ed67",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0e82e29c72a04ed67",
            "ingress": [],
            "name": "questo-eks-AF7DWDoH20211119235040356000000007",
            "name_prefix": "questo-eks-AF7DWDoH",
            "owner_id": "970391478493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "questo-eks-AF7DWDoH-eks_worker_sg",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "questo-eks-AF7DWDoH-eks_worker_sg",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3837178494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03b16febf9acf6f27",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3452278996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b16febf9acf6f27",
            "self": false,
            "source_security_group_id": "sg-0e82e29c72a04ed67",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-608650373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e82e29c72a04ed67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4242103295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82e29c72a04ed67",
            "self": false,
            "source_security_group_id": "sg-03b16febf9acf6f27",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-549919653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82e29c72a04ed67",
            "self": false,
            "source_security_group_id": "sg-03b16febf9acf6f27",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-914320085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e82e29c72a04ed67",
            "self": false,
            "source_security_group_id": "sg-0e82e29c72a04ed67",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6c8ece5589f5340",
            "domain": "vpc",
            "id": "eipalloc-0c6c8ece5589f5340",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-170-137-86.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.137.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "questo-vpc-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:internet-gateway/igw-0c4759785fb69b9ba",
            "id": "igw-0c4759785fb69b9ba",
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6c8ece5589f5340",
            "connectivity_type": "public",
            "id": "nat-0cf64839c654defae",
            "network_interface_id": "eni-0355a042ab03458e0",
            "private_ip": "10.0.2.120",
            "public_ip": "18.170.137.86",
            "subnet_id": "subnet-0f3585c0ee1681ffd",
            "tags": {
              "Name": "questo-vpc-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9194922d44383eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf64839c654defae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9194922d44383eb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4759785fb69b9ba",
            "id": "r-rtb-055e3ade50995cd0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055e3ade50995cd0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:route-table/rtb-0d9194922d44383eb",
            "id": "rtb-0d9194922d44383eb",
            "owner_id": "970391478493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "questo-vpc-private",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-private",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:route-table/rtb-055e3ade50995cd0c",
            "id": "rtb-055e3ade50995cd0c",
            "owner_id": "970391478493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "questo-vpc-public",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-public",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f0f8bf6735209ce",
            "route_table_id": "rtb-0d9194922d44383eb",
            "subnet_id": "subnet-0653092fb4b5f5373"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e655b9fe99eb0f46",
            "route_table_id": "rtb-0d9194922d44383eb",
            "subnet_id": "subnet-0aa5b6b08e84aaad6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002847707dd2c22fd",
            "route_table_id": "rtb-0d9194922d44383eb",
            "subnet_id": "subnet-052546a418e672832"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd842c5d1e085a6",
            "route_table_id": "rtb-055e3ade50995cd0c",
            "subnet_id": "subnet-0f3585c0ee1681ffd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014aa61a4025db154",
            "route_table_id": "rtb-055e3ade50995cd0c",
            "subnet_id": "subnet-0ce6511c9a02df7a6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b43fb369a7e186b",
            "route_table_id": "rtb-055e3ade50995cd0c",
            "subnet_id": "subnet-04a6ab028a6434025"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-0653092fb4b5f5373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0653092fb4b5f5373",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-0aa5b6b08e84aaad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0aa5b6b08e84aaad6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-052546a418e672832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-052546a418e672832",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-0f3585c0ee1681ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f3585c0ee1681ffd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-0ce6511c9a02df7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ce6511c9a02df7a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:subnet/subnet-04a6ab028a6434025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04a6ab028a6434025",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared",
              "kubernetes.io/role/elb": "1",
              "kuernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "vpc_id": "vpc-019a202cd2479149c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:970391478493:vpc/vpc-019a202cd2479149c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbe3e7a4f6f404a8",
            "default_route_table_id": "rtb-074e14016329affc2",
            "default_security_group_id": "sg-057c5b357b748d73e",
            "dhcp_options_id": "dopt-6cd21104",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019a202cd2479149c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074e14016329affc2",
            "owner_id": "970391478493",
            "tags": {
              "Name": "questo-vpc",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            },
            "tags_all": {
              "Name": "questo-vpc",
              "kubernetes.io/cluster/questo-eks-AF7DWDoH": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}